--- a/style.css
+++ b/style.css
@@ -4,6 +4,25 @@
 body {
     margin: 0;
     background-color: #eeeeee;
+    color: #222222;
+    font-family: sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+p {
+    line-height: 1.8;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover{
+    filter: brightness(90%) contrast(120%);
 }
 
 img {
@@ -39,3 +58,46 @@ img {
     color: #aaaaaa;
     font-size: 30px;
 }
+
+/* ヒーロー */
+.hero {
+    height: 650px;
+    background-image: url(img/hero.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.hero-container{
+    display: grid;
+    justify-items: center;
+    align-content: center;
+    height: 100%;
+}
+
+.hero h1 {
+    margin-bottom: 42px;
+    font-family: "Montserrat",sans-serif;
+    font-size: clamp(48px, 5vw, 68px);
+    min-height: 0vw;
+    font-weight: 400;
+    line-height: 1.3;
+    text-align: center;
+}
+
+,.hero p {
+    margin-bottom: 72px;
+}
+
+/* ボタン */
+.btn {
+    display: block;
+    width: 260px;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    background-color: #e8b368;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.32);
+} 
