--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ img {
 .w-container {
     width: min(92%, 1166px);
     margin: auto;
+    position: relative;
 }
 
 /* ヘッダー */
@@ -174,8 +175,22 @@ img {
     background-color: #f3f1ed;
 }
 
+.posts-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px 25px;
+}
+
+@media (min-width: 768px) {
+    .posts-container{
+        grid-template: repeat(3, 1fr);
+    }
+}
+
 /* パーツの見出し */
 .heading {
+    position: absolute;
+    top: calc((var(--v-space) + 0.6em) * -1);
     font-family: "Montserrat", sans-serif;
     font-size: clamp(40px, 5.2vw, 70px);
     min-height: 0vw;
