--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ img {
 
 @media (min-width: 768px) {
     .posts-container{
-        grid-template: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
