--- a/style.css
+++ b/style.css
@@ -187,6 +187,30 @@ img {
     }
 }
 
+/* 記事一覧の記事 */
+.post a {
+    display: block;
+}
+
+.post h3 {
+    margin: 1em 0 0.5em;
+    font-size: clamp(12px, 2vw, 20px);
+    min-height: 0vw;
+}
+
+.post p {
+    max-width: 20em;
+    font-size: clamp(10px, 1.6vw, 14px);
+    min-height: 0vw;
+}
+
+.post img {
+    aspect-ratio: 3 / 2;
+    object-fit: cover;
+    width: 100%;
+}
+
+
 /* パーツの見出し */
 .heading {
     position: absolute;
